# ball

./: CMakeLists.txt  README  pyproject.toml
.github/workflows/: build-wheels.yml  python-smoke.yml
cmake/: BALLCompilerSpecific.cmake  BALLComponents.cmake  BALLConfig.cmake.in  BALLConfigBoost.cmake  BALLConfiguration.cmake  BALLIncludes.cmake  BALLMacros.cmake  BALLTargets.cmake  FindlibSVM.cmake  config.h.in
include/BALL/CONCEPT/: objectCreator.h  persistenceManager.h  textPersistenceManager.h
include/BALL/DATATYPE/: contourSurface.h
include/BALL/DOCKING/: geometricFit.h
include/BALL/DOCKING/COMMON/: constraints.h  poseClustering.h
include/BALL/FORMAT/: dockResultFile.h
include/BALL/STRUCTURE/: molecularSimilarity.h
include/BALL/SYSTEM/: mutex.h
python/: CMakeLists.txt  README.md
python/src/: module.cpp
python/tests/: test_smoke.py
source/CONCEPT/: objectCreator.C  sources.cmake
source/DOCKING/: geometricFit.C
source/DOCKING/COMMON/: poseClustering.C
source/FORMAT/: SDFile.C
source/KERNEL/: expressionParserParser.y
source/QSAR/: pcrModel.C
source/STRUCTURE/: molecularSimilarity.C  sources.cmake
source/SYSTEM/: sources.cmake
test/: AmberFF_test.C  CMakeLists.txt
test/cmake/: BALLTestExecutables.cmake
